policies/tests/require-requests-limits/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1
kind: Test
metadata:
  name: require-requests-limits
policies:
  - ../../require-requests-limits.yaml
resources:
  - resources.yaml
results:
  - policy: require-requests-limits
    rule: deny-no-resources
    resources:
      - no-resources
    result: fail
  - policy: require-requests-limits
    rule: deny-no-cpu-request
    resources:
      - no-cpu-request
    result: fail
  - policy: require-requests-limits
    rule: deny-no-memory-request
    resources:
      - no-memory-request
    result: fail
  - policy: require-requests-limits
    rule: deny-no-memory-limit
    resources:
      - no-memory-limit
    result: fail
  - policy: require-requests-limits
    rule: deny-no-memory-limit-init
    resources:
      - no-memory-limit-init
    result: fail
  - policy: require-requests-limits
    rule: allow-requests-limits
    resources:
      - compliant
    result: pass
